# mqlib_wrap

./: .gitignore  README.md  ensure_mqlib.py  mqlib_installation_utils.py  pyproject.toml  uninstall_mqlib.py
examples/: log  small_problem.py
src/mqlib_wrap/: __init__.py  config.py  core.py
tests/: test_config_gpt_generated.py  test_optimization.py
